connect to ClearDB
